--- a/warteschlange.html
+++ b/warteschlange.html
@@ -3,7 +3,8 @@
 <img src="https://statistik.space/piwik/matomo.php?idsite=8&amp;rec=1" style="border:0" alt="" />
 <b>Demo-Termine</b> von https://terminkalender.top <br><br>
 <i>Mit dem Stand um
-08:25:57 Uhr, warten folgende Demotermine auf die Freischaltung:</i><br><br>
+08:52:38 Uhr, warten folgende Demotermine auf die Freischaltung:</i><br><br>
 
 
 
+&#9654; 2021-06-22, DE, Bad Rappenau, Kirchplatz (Rathaus) (Versammlung) &#128337; 18:00<br>
