--- a/warteschlange.html
+++ b/warteschlange.html
@@ -3,8 +3,8 @@
 <img src="https://statistik.space/piwik/matomo.php?idsite=8&amp;rec=1" style="border:0" alt="" />
 <b>Demo-Termine</b> von https://terminkalender.top <br><br>
 <i>Mit dem Stand um
-16:33:49 Uhr, warten folgende Demotermine auf die Freischaltung:</i><br><br>
+16:49:28 Uhr, warten folgende Demotermine auf die Freischaltung:</i><br><br>
 
 
 
-&#9654; 2021-06-21, DE, Bamberg, Bahnhof gegenüber (Spaziergang) &#128337; 18:00<br>
+&#9654; 2021-06-21, DE, Bamberg, Bahnhof gegenüber (Spaziergang) &#128337; 18:00<br>&#9654; 2021-06-27, DE, Zittau, B 96 (Menschenkette) &#128337; 10:00<br>
