--- a/warteschlange.html
+++ b/warteschlange.html
@@ -3,7 +3,8 @@
 <img src="https://statistik.space/piwik/matomo.php?idsite=8&amp;rec=1" style="border:0" alt="" />
 <b>Demo-Termine</b> von https://terminkalender.top <br><br>
 <i>Mit dem Stand um
-21:27:13 Uhr, warten folgende Demotermine auf die Freischaltung:</i><br><br>
+21:36:07 Uhr, warten folgende Demotermine auf die Freischaltung:</i><br><br>
 
 
 
+&#9654; 2021-06-27, DE, Cuxhaven, Kaemmererplatz (Spaziergang) &#128337; 15:00<br>
