Update warteschlange.html from https://demo.terminkalender.top/tag/warteschlange_github.php

--- a/warteschlange.html
+++ b/warteschlange.html
@@ -3,8 +3,8 @@
 <img src="https://statistik.space/piwik/matomo.php?idsite=8&amp;rec=1" style="border:0" alt="" />
 <b>Demo-Termine</b> von https://terminkalender.top <br><br>
 <i>Mit dem Stand um
-20:49:39 Uhr, warten folgende Demotermine auf die Freischaltung:</i><br><br>
+21:12:54 Uhr, warten folgende Demotermine auf die Freischaltung:</i><br><br>
 
 
 
-&#9654; 2021-06-25, DE, Bamberg, Fuchsparkstadion (Autokorso) &#128337; 18:00<br>&#9654; 2021-06-26, DE, Koblenz, Jesuitenplatz (Mahnwache) &#128337; 14:00<br>&#9654; 2021-06-26, DE, Hannover, Ritter-Brüning-Straße, Parking (Autokorso) &#128337; 14:30<br>
+&#9654; 2021-06-25, DE, Bamberg, Fuchsparkstadion (Autokorso) &#128337; 18:00<br>&#9654; 2021-06-26, DE, Koblenz, Jesuitenplatz (Mahnwache) &#128337; 14:00<br>&#9654; 2021-06-26, DE, Hannover, Ritter-Brüning-Straße, Parking (Autokorso) &#128337; 14:30<br>&#9654; 2021-07-04, DE, Steinwenden, 49.468562, 7.525640 (Festival) &#128337; 14:00<br>
