--- a/warteschlange.html
+++ b/warteschlange.html
@@ -3,8 +3,8 @@
 <img src="https://statistik.space/piwik/matomo.php?idsite=8&amp;rec=1" style="border:0" alt="" />
 <b>Demo-Termine</b> von https://terminkalender.top <br><br>
 <i>Mit dem Stand um
-08:34:27 Uhr, warten folgende Demotermine auf die Freischaltung:</i><br><br>
+08:55:16 Uhr, warten folgende Demotermine auf die Freischaltung:</i><br><br>
 
 
 
-&#9654; 2021-06-26, DE, Celle, Neumarkt (Spaziergang) &#128337; 11:00<br>&#9654; 2021-06-28, DE, Kempen, Kuhtor (Spaziergang) &#128337; 19:00<br>
+&#9654; 2021-06-26, DE, Celle, Neumarkt (Spaziergang) &#128337; 11:00<br>&#9654; 2021-06-26, DE, Reichelsheim, Ortseingang Aldi B 38 (Zusammenkunft) &#128337; 14:00<br>&#9654; 2021-06-28, DE, Kempen, Kuhtor (Spaziergang) &#128337; 19:00<br>
