--- a/warteschlange.html
+++ b/warteschlange.html
@@ -3,8 +3,8 @@
 <img src="https://statistik.space/piwik/matomo.php?idsite=8&amp;rec=1" style="border:0" alt="" />
 <b>Demo-Termine</b> von https://terminkalender.top <br><br>
 <i>Mit dem Stand um
-19:10:59 Uhr, warten folgende Demotermine auf die Freischaltung:</i><br><br>
+19:34:42 Uhr, warten folgende Demotermine auf die Freischaltung:</i><br><br>
 
 
 
-&#9654; 2021-06-27, DE, Wittlich, Platz an der Lieser (Demonstration) &#128337; 14:00<br>
+&#9654; 2021-06-26, DE, Fulda, Universitätsplatz (Kundgebung) &#128337; 14:00<br>&#9654; 2021-06-27, DE, Wittlich, Platz an der Lieser (Demonstration) &#128337; 14:00<br>&#9654; 2021-08-02, DE, Langen (Hessen), Bahnstrasse/Ecke Goethestraße (Mahnwache) &#128337; 18:00<br>&#9654; 2021-08-09, DE, Langen (Hessen), Bahnstrasse/Ecke Goethestraße (Mahnwache) &#128337; 18:00<br>&#9654; 2021-08-16, DE, Langen (Hessen), Bahnstrasse/Ecke Goethestraße (Mahnwache) &#128337; 18:00<br>&#9654; 2021-08-23, DE, Langen (Hessen), Bahnstrasse/Ecke Goethestraße (Mahnwache) &#128337; 18:00<br>&#9654; 2021-08-30, DE, Langen (Hessen), Bahnstrasse/Ecke Goethestraße (Mahnwache) &#128337; 18:00<br>&#9654; 2021-09-06, DE, Langen (Hessen), Bahnstrasse/Ecke Goethestraße (Mahnwache) &#128337; 18:00<br>&#9654; 2021-09-13, DE, Langen (Hessen), Bahnstrasse/Ecke Goethestraße (Mahnwache) &#128337; 18:00<br>&#9654; 2021-09-20, DE, Langen (Hessen), Bahnstrasse/Ecke Goethestraße (Mahnwache) &#128337; 18:00<br>
