--- a/warteschlange.html
+++ b/warteschlange.html
@@ -3,7 +3,8 @@
 <img src="https://statistik.space/piwik/matomo.php?idsite=8&amp;rec=1" style="border:0" alt="" />
 <b>Demo-Termine</b> von https://terminkalender.top <br><br>
 <i>Mit dem Stand um
-03:50:10 Uhr, warten folgende Demotermine auf die Freischaltung:</i><br><br>
+04:20:48 Uhr, warten folgende Demotermine auf die Freischaltung:</i><br><br>
 
 
 
+&#9654; 2021-06-26, DE, Freiburg, Platz der alten Synagoge (Mahnwache) &#128337; 16:00<br>
