--- a/warteschlange.html
+++ b/warteschlange.html
@@ -3,8 +3,8 @@
 <img src="https://statistik.space/piwik/matomo.php?idsite=8&amp;rec=1" style="border:0" alt="" />
 <b>Demo-Termine</b> von https://terminkalender.top <br><br>
 <i>Mit dem Stand um
-09:09:01 Uhr, warten folgende Demotermine auf die Freischaltung:</i><br><br>
+09:24:39 Uhr, warten folgende Demotermine auf die Freischaltung:</i><br><br>
 
 
 
-&#9654; 2021-06-26, DE, Nürnberg, Jakobsplatz (Kundgebung) &#128337; 18:00<br>&#9654; 2021-06-29, DE, Schloß Holte-Stukenbrock, Holter Kirchplatz (Spaziergang) &#128337; 18:00<br>
+&#9654; 2021-06-26, DE, Münster, Promenade (Kanalstraße) (Kundgebung) &#128337; 15:00<br>&#9654; 2021-06-26, DE, Nürnberg, Jakobsplatz (Kundgebung) &#128337; 18:00<br>&#9654; 2021-06-29, DE, Schloß Holte-Stukenbrock, Holter Kirchplatz (Spaziergang) &#128337; 18:00<br>
