--- a/warteschlange.html
+++ b/warteschlange.html
@@ -3,8 +3,8 @@
 <img src="https://statistik.space/piwik/matomo.php?idsite=8&amp;rec=1" style="border:0" alt="" />
 <b>Demo-Termine</b> von https://terminkalender.top <br><br>
 <i>Mit dem Stand um
-10:07:10 Uhr, warten folgende Demotermine auf die Freischaltung:</i><br><br>
+10:29:31 Uhr, warten folgende Demotermine auf die Freischaltung:</i><br><br>
 
 
 
-&#9654; 2021-07-03, DE, Reichelsheim, B 38 Ortseingang Aldi (Zusammenkunft) &#128337; 14:00<br>
+&#9654; 2021-07-05, DE, Celle, Stechbahn - Schloß (Spaziergang) &#128337; 18:30<br>
