--- a/warteschlange.html
+++ b/warteschlange.html
@@ -3,7 +3,8 @@
 <img src="https://statistik.space/piwik/matomo.php?idsite=8&amp;rec=1" style="border:0" alt="" />
 <b>Demo-Termine</b> von https://terminkalender.top <br><br>
 <i>Mit dem Stand um
-13:31:58 Uhr, warten folgende Demotermine auf die Freischaltung:</i><br><br>
+13:48:58 Uhr, warten folgende Demotermine auf die Freischaltung:</i><br><br>
 
 
 
+&#9654; 2021-07-25, EU, Brückenspaziergang DE - AT, siehe Info auf Webseite (Kundgebung) &#128337; 17:00<br>
