--- a/warteschlange.html
+++ b/warteschlange.html
@@ -3,7 +3,8 @@
 <img src="https://statistik.space/piwik/matomo.php?idsite=8&amp;rec=1" style="border:0" alt="" />
 <b>Demo-Termine</b> von https://terminkalender.top <br><br>
 <i>Mit dem Stand um
-22:00:27 Uhr, warten folgende Demotermine auf die Freischaltung:</i><br><br>
+22:21:23 Uhr, warten folgende Demotermine auf die Freischaltung:</i><br><br>
 
 
 
+&#9654; 2021-07-02, DE, Schwetzingen - Ohne Maske, Lutherhaus, Mannheimer Str. 36 (Kundgebung) &#128337; 18:00<br>
