--- a/warteschlange.html
+++ b/warteschlange.html
@@ -3,7 +3,8 @@
 <img src="https://statistik.space/piwik/matomo.php?idsite=8&amp;rec=1" style="border:0" alt="" />
 <b>Demo-Termine</b> von https://terminkalender.top <br><br>
 <i>Mit dem Stand um
-07:11:20 Uhr, warten folgende Demotermine auf die Freischaltung:</i><br><br>
+07:25:13 Uhr, warten folgende Demotermine auf die Freischaltung:</i><br><br>
 
 
 
+&#9654; 2021-07-05, DE, Haslbach/Schwandorf, Kirchawirt (Zusammenkunft) &#128337; 18:00<br>
