Update warteschlange.html from https://demo.terminkalender.top/tag/warteschlange_github.php

--- a/warteschlange.html
+++ b/warteschlange.html
@@ -3,8 +3,8 @@
 <img src="https://statistik.space/piwik/matomo.php?idsite=8&amp;rec=1" style="border:0" alt="" />
 <b>Demo-Termine</b> von https://terminkalender.top <br><br>
 <i>Mit dem Stand um
-21:02:16 Uhr, warten folgende Demotermine auf die Freischaltung:</i><br><br>
+21:25:03 Uhr, warten folgende Demotermine auf die Freischaltung:</i><br><br>
 
 
 
-&#9654; 2021-08-16, DE, Apolda, Rathaus/ Markt (Spaziergang) &#128337; 18:30<br>&#9654; 2021-08-23, DE, Apolda, Rathaus/ Markt (Spaziergang) &#128337; 18:30<br>&#9654; 2021-08-30, DE, Apolda, Rathaus/ Markt (Spaziergang) &#128337; 18:30<br>&#9654; 2021-09-04, DE, Karlsruhe, Platz der Grundrechte (Schilderwald) &#128337; 13:00<br>
+&#9654; 2021-08-16, DE, Apolda, Rathaus/ Markt (Spaziergang) &#128337; 18:30<br>&#9654; 2021-08-22, DE, CUXHAVEN, Kaemmererplatz (Spaziergang) &#128337; 15:00<br>&#9654; 2021-08-23, DE, Apolda, Rathaus/ Markt (Spaziergang) &#128337; 18:30<br>&#9654; 2021-08-30, DE, Apolda, Rathaus/ Markt (Spaziergang) &#128337; 18:30<br>&#9654; 2021-09-04, DE, Karlsruhe, Platz der Grundrechte (Schilderwald) &#128337; 13:00<br>
