--- a/warteschlange.html
+++ b/warteschlange.html
@@ -3,8 +3,8 @@
 <img src="https://statistik.space/piwik/matomo.php?idsite=8&amp;rec=1" style="border:0" alt="" />
 <b>Demo-Termine</b> von https://terminkalender.top <br><br>
 <i>Mit dem Stand um
-14:09:31 Uhr, warten folgende Demotermine auf die Freischaltung:</i><br><br>
+14:45:51 Uhr, warten folgende Demotermine auf die Freischaltung:</i><br><br>
 
 
 
-&#9654; 2021-08-21, DE, Bochum, Dr.-Ruer-Platz, 44787 Bochum (Aufzug) &#128337; 15:00<br>
+&#9654; 2021-08-21, DE, Bochum, Dr.-Ruer-Platz, 44787 Bochum (Aufzug) &#128337; 15:00<br>&#9654; 2021-08-30, DE, Stade, Stader Bürgerpark (Spaziergang) &#128337; 18:30<br>
