--- a/warteschlange.html
+++ b/warteschlange.html
@@ -3,8 +3,8 @@
 <img src="https://statistik.space/piwik/matomo.php?idsite=8&amp;rec=1" style="border:0" alt="" />
 <b>Demo-Termine</b> von https://terminkalender.top <br><br>
 <i>Mit dem Stand um
-10:36:27 Uhr, warten folgende Demotermine auf die Freischaltung:</i><br><br>
+10:54:14 Uhr, warten folgende Demotermine auf die Freischaltung:</i><br><br>
 
 
 
-&#9654; 2021-08-21, DE, Koblenz, Jesuitenplatz (Mahnwache) &#128337; 14:00<br>
+&#9654; 2021-08-21, DE, Koblenz, Jesuitenplatz (Mahnwache) &#128337; 14:00<br>&#9654; 2021-08-25, DE, Schwerin, Mecklenburgstraße (Treffpunkt) &#128337; 12:00<br>
