--- a/warteschlange.html
+++ b/warteschlange.html
@@ -3,8 +3,8 @@
 <img src="https://statistik.space/piwik/matomo.php?idsite=8&amp;rec=1" style="border:0" alt="" />
 <b>Demo-Termine</b> von https://terminkalender.top <br><br>
 <i>Mit dem Stand um
-11:52:06 Uhr, warten folgende Demotermine auf die Freischaltung:</i><br><br>
+12:00:42 Uhr, warten folgende Demotermine auf die Freischaltung:</i><br><br>
 
 
 
-&#9654; 2021-08-24, DE, Nürnberg, Hallplatz / Königstraße (Kundgebung) &#128337; 18:00<br>&#9654; 2021-08-25, DE, Nürnberg, Lorenzkirche (Kundgebung) &#128337; 18:00<br>&#9654; 2021-08-26, DE, Nürnberg, Lorenzkirche (Kundgebung) &#128337; 19:30<br>&#9654; 2021-08-26, DE, Berlin, Hohenwalder Str. 2 vor Schule (Kundgebung) &#128337; 19:45<br>&#9654; 2021-08-26, DE, Berlin, Hohenwalder Str. 2 vor Schule (Kundgebung) &#128337; 19:45<br>&#9654; 2021-08-27, DE, Berlin, Parkpl. HELLERSDORFER Str. 159 (Autokorso) &#128337; 17:30<br>&#9654; 2021-08-27, DE, Nürnberg, Lorenzkirche (Kundgebung) &#128337; 19:30<br>&#9654; 2021-08-28, DE, Nürnberg, Jakobsplatz (Kundgebung) &#128337; 18:00<br>&#9654; 2021-08-30, DE, Celle, Stechbahn - Schloß (Spaziergang) &#128337; 18:30<br>
+&#9654; 2021-08-24, DE, Nürnberg, Hallplatz / Königstraße (Kundgebung) &#128337; 18:00<br>&#9654; 2021-08-25, DE, Nürnberg, Lorenzkirche (Kundgebung) &#128337; 18:00<br>&#9654; 2021-08-26, DE, Nürnberg, Lorenzkirche (Kundgebung) &#128337; 19:30<br>&#9654; 2021-08-26, DE, Berlin, Hohenwalder Str. 2 vor Schule (Kundgebung) &#128337; 19:45<br>&#9654; 2021-08-26, DE, Berlin, Hohenwalder Str. 2 vor Schule (Kundgebung) &#128337; 19:45<br>&#9654; 2021-08-27, DE, Berlin, Parkpl. HELLERSDORFER Str. 159 (Autokorso) &#128337; 17:30<br>&#9654; 2021-08-27, DE, Nürnberg, Lorenzkirche (Kundgebung) &#128337; 19:30<br>&#9654; 2021-08-28, DE, Berlin, Parkpl. Hellersdorfer Str. 159 (Autokorso) &#128337; 13:30<br>&#9654; 2021-08-28, DE, Nürnberg, Jakobsplatz (Kundgebung) &#128337; 18:00<br>&#9654; 2021-08-30, DE, Celle, Stechbahn - Schloß (Spaziergang) &#128337; 18:30<br>
